# curve

./: .bazelrc  MODULE.bazel  README.md  STATIC_LINKING.md  build_static.sh  check_static_link.sh  setup.py
bazel/: BUILD.bazel  curve.bzl
curve/oprf/: BUILD.bazel  ecdh_oprf.cc  ecdh_oprf.h  oprf_test.cc
docker/: build_in_docker.sh
oprf/: BUILD.bazel  basic_ecdh_oprf.cc  basic_ecdh_oprf.h  basic_ecdh_oprf_test.cc  ecdh_oprf.cc  ecdh_oprf_selector.cc  ecdh_oprf_selector.h
pycurve/oprf/: BUILD.bazel  __init__.py  ecdh_oprf_test.py  libecdh_oprf.cc
python/oprf/: __init__.py  ecdh_oprf_test.py  libecdh_oprf.cc
