# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:curve.bzl", "curve_cc_binary", "curve_cc_library", "curve_cc_test")
package(default_visibility = ["//visibility:public"])


curve_cc_library(
    name = "ecdh_oprf",
    srcs = ["ecdh_oprf.cc"],
    hdrs = ["ecdh_oprf.h"],
    linkopts = select({
        "@platforms//os:linux": ["-static-libstdc++", "-static-libgcc", "-Wl,--no-as-needed", "-Wl,-Bstatic", "-Wl,--whole-archive", "-lpthread", "-Wl,--no-whole-archive", "-static"],
        "//conditions:default": [],
    }),
    deps = [
        "@psi//psi/algorithm/ecdh/ub_psi:basic_ecdh_oprf",
        "@psi//psi/algorithm/ecdh/ub_psi:ecdh_oprf_selector",
        "@yacl//yacl/crypto/rand",
    ],
)

curve_cc_test(
    name = "oprf_test",
    srcs = ["oprf_test.cc"],
    deps = [
        ":ecdh_oprf",
    ],
)






