load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_library", "py_test", "py_binary")

package(default_visibility = ["//visibility:public"])

# EcdhOPRF Python绑定
pybind_extension(
    name = "libecdh_oprf",
    srcs = ["libecdh_oprf.cc"],
    linkopts = select({
        "@platforms//os:windows": ["/FORCE:UNRESOLVED"],
        "@platforms//os:linux": ["-static-libstdc++", "-static-libgcc", "-Wl,--no-as-needed", "-Wl,-Bstatic", "-Wl,--whole-archive", "-lpthread", "-Wl,--no-whole-archive", "-static"],
        "//conditions:default": [],
    }),
    deps = [
        "//curve/oprf:ecdh_oprf",
    ],
)

py_library(
    name = "ecdh_oprf_lib",
    srcs = ["__init__.py"],
    data = [":libecdh_oprf.so"],
    imports = ["."],
)

py_test(
    name = "ecdh_oprf_test",
    srcs = ["ecdh_oprf_test.py"],
    deps = [":ecdh_oprf_lib"],
)

# 添加别名目标
filegroup(
    name = "libecdh_oprf_alias",
    srcs = [":libecdh_oprf.so"],
)